<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="place_new_reservation">New reservation…</string>
    <string name="open_room">Open</string>
    <string name="occupied_room">Occupied</string>
    <string name="init_room">Initialising</string>
    <string name="edit_settings">Edit settings</string>
    <string name="set_date_to_today">View today</string>
    <string name="select_date">Select date</string>
    <string name="current_meeting">Current meeting information</string>
    <string name="none">None</string>
    <string name="organizer">Organizer</string>
    <string name="meeting_name">Topic</string>
    <string name="date_start">Start</string>
    <string name="date_end">End</string>
    <string name="participants">Participants</string>
    <string name="loading">Loading</string>
    <string name="date">Date</string>
    <string name="date_start_full">Start time</string>
    <string name="date_end_full">End time</string>
    <string name="Select">Select</string>
    <string name="selected">Selected</string>
    <string name="next">Next step</string>
    <string name="select_room">Select room</string>
    <string name="finish_add_desc">To confirm the creation of this meeting, please provide your login information.</string>
    <string name="your_login">Your login</string>
    <string name="your_password">Your password</string>
    <string name="create_meeting">Create meeting</string>
    <string name="finish">Add meeting</string>
    <string name="search">Search</string>
    <string name="view">View details</string>
    <string name="refresh">Refresh status</string>
    <string name="meetings_for">Meetings on </string>
    <string name="settings_fragment">Settingsfragmenttest</string>
    <string name="user_already_selected">This user was already selected.</string>
    <string name="end_time_before">The end time cannot be before the start time.</string>
    <string name="at_least_one_user">You must select at least one user.</string>
    <string name="form_invalid">The form data provided is invalid. Please verify the values above.</string>

    <string name="settings_label">Space list</string>
    <string name="initial_label">Space information</string>
    <string name="add_label">Booking creation form</string>
</resources>
