<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <!-- Layout nécessaire pour databinding -->
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.example.rickandmorty.ui.addnewmeetingform.AddNewMeetingFormStep1ViewModel"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addnewmeetingform.AddNewMeetingFormStep1Fragment"
        >

        <!-- visibility ="@{viewModel.isVisible?View.Gone : View.VISIBLE }" -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="10dp">


            <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_name"
                        android:layout_gravity="left"
                        android:textStyle="bold"
                        android:textSize="30sp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.6"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    >
                    <EditText
                        android:id="@+id/AddNewForm1TopicInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@={viewModel.topicName}"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:layout_gravity="left"
                        android:textStyle="bold"
                        android:textSize="30sp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/addNewForm1DayLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:text="@{viewModel.selectedDay}"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="5dp"
                    >
                    <Button
                        android:id="@+id/addNewForm1DayBtn"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:textSize="30sp"
                        android:text="@string/Select" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_start_full"
                        android:layout_gravity="left"
                        android:textStyle="bold"
                        android:textSize="30sp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/addNewForm1StartTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.selectedStartTime}"
                        android:textSize="30sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="5dp"
                    >
                    <Button
                        android:id="@+id/addNewForm1StartTimeBtn"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:textSize="30sp"
                        android:text="@string/Select"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_end_full"
                        android:layout_gravity="left"
                        android:textStyle="bold"
                        android:textSize="30sp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/addNewForm1EndTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.selectedEndTime}"
                        android:textSize="30sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="5dp"
                    >
                    <Button
                        android:id="@+id/addNewForm1EndTimeBtn"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_vertical"
                        android:textSize="30sp"
                        android:text="@string/Select"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/addNewForm1Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/next"
                android:gravity="center"
                android:layout_margin="30dp"
                android:backgroundTint="@color/success" />
        </LinearLayout>

    </FrameLayout>
</layout>